Fix Additional Info section top and bottom spacing

--- a/src/components/AdditionalInfo/additionalInfo.module.css
+++ b/src/components/AdditionalInfo/additionalInfo.module.css
@@ -1,5 +1,6 @@
 .additional-info {
-  margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background: #EFF1F2;
 }
 
